@@ -11,6 +11,7 @@ opsi-winst/opsi-script (4.12.0.16) stable; urgency=low
   * change to Lazarus 1.8.2
   * switch HighDPI awareness on (8.1+, per monitor)
   * osparser: reportError: more info on defined functions at syntax error
+  * osfunc: getsectionlines: include leading comments and empty lines
 
 -- Detlef Oertel <d.oertel@uib.de>  Wed, 14 Mar 2018:15:00:00 +0200
 
